[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Laser/Laser.png" type="Texture" id=1]
[ext_resource path="res://Assets/Laser/Laser.gd" type="Script" id=2]

[node name="LaserProjectile" type="Area2D"]
light_mask = 16
position = Vector2( 519.119, 312.881 )
collision_layer = 16
collision_mask = 18
script = ExtResource( 2 )

[node name="Laser" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Lifetime" type="Timer" parent="."]
autostart = true

[node name="LaserBody" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="LaserCollisionPolygon2D" type="CollisionPolygon2D" parent="LaserBody"]
light_mask = 16
rotation = 1.5708
polygon = PoolVector2Array( 1, -4.5, 2, -4.5, 2, 4.5, 1, 4.5, 1, 5.5, -1, 5.5, -1, 4.5, -2, 4.5, -2, -4.5, -1, -4.5, -1, -5.5, 1, -5.5 )
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="area_entered" from="LaserBody" to="." method="_on_LaserBody_area_entered"]
[connection signal="body_entered" from="LaserBody" to="." method="_on_LaserBody_body_entered"]
